syntax = "proto3";

package http.class;

import "google/api/annotations.proto";

option go_package = "wuzigoweb/api/http/class;class";

service Class {
  // 创建班级
  rpc CreateClass (CreateClassRequest) returns (CreateClassReply) {
    option (google.api.http) = {
      post: "/v1/class/create",
      body: '*',
    };
  }

  // 根据名字获取班级信息
  rpc GetClassByName (GetClassByNameRequest) returns (GetClassByNameReply) {
    option (google.api.http) = {
      post: "/v1/class/get_by_name",
      body: '*'
    };
  }
}

// 创建班级
message CreateClassRequest {
  string name = 1;
}

message CreateClassReply {
  int64 id = 1;
}

// 获取班级信息
message GetClassByNameRequest {
  string name = 1;
}

message GetClassByNameReply {
  string name = 1;
  string student = 2;
  string teacher = 3;
}